# qlcpy

./: .gitignore  LICENSE  README.md  setup.cfg
pyqlc/: __init__.py  generator.py  main.py  models.py
pyqlc/i18n/: fi.py
pyqlc/instrument/: Instrumentor.py  ProgramData.py  TransformAST.py  TransformForInstrumentor.py  WalkAST.py  WalkFind.py  WalkNames.py  __init__.py  primitives.py  trees.py
pyqlc/questions/: QLCPreparer.py  __init__.py  dynamic.py  lines.py  options.py
qlcpy/: __init__.py  __main__.py  arrays.py  generator.py  models.py  primitives.py
qlcpy/i18n/: __init__.py  en.py  fi.py
qlcpy/instrument/: Instrumentor.py  ProgramData.py  TransformAST.py  TransformForInstrumentor.py  VariableRole.py  WalkErrorCauses.py  WalkFind.py  WalkLinePurposes.py  WalkNames.py  WalkNext.py  __init__.py  primitives.py  trees.py
qlcpy/questions/: __init__.py  dynamic.py  lines.py  names.py  options.py  purpose.py
test/: issues_code.py  sample_code.py  test_instrumentor.py  test_printer.py  test_questions.py  test_transform.py
