[metadata]
name = qlcpy
version = 1.0.16
author = Teemu Lehtinen
author_email = teemu.t.lehtinen@aalto.fi
description = Generates questions about given Python program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teemulehtinen/qlcpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = qlcpy, qlcpy.i18n, qlcpy.instrument, qlcpy.questions

[options.entry_points]
console_scripts =
    qlcpy = qlcpy:main
